demo-cluster/.k8s-gen/app-manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
