demo-cluster/.k8s-gen/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: audit
  rules:
    - name: check-container-resources
      match:
        resources:
          kinds:
            - Deployment
            - pod
      validate:
        message: "Containers must have resource requests and limits."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      requests:
                        memory: "?*"
                        cpu: "?*"
                      limits:
                        memory: "?*"
                        cpu: "?*"
